# GALectures

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  GASandbox.rc  README.md  imgui.ini
Assets/: index.txt  manifest.txt  readme.md
Assets/App/: app.wren  imgui.ini  imgui_style.json  style.json
Assets/Common/: pga2.glsl  pga2.wren  pga3.wren  util.wren  vertex2.glsl  vertex3.glsl
Assets/Common/Scripts/: app.wren
Assets/Complex/: main.wren
Assets/Complex/Scripts/: complex.wren  main.wren
Assets/Complex/Shaders/: vertex.glsl
Assets/GA/: ga.wren  main.wren
Assets/GNum/: gnum.wren  main.wren
Assets/Game/: main.wren
Assets/Net/: main.wren
Assets/PGA/Scripts/: main.wren  pga.wren
Assets/PGA/Shaders/: pga.glsl  vertex.glsl
Assets/PGA2/: main.wren  pga2.glsl  pga2.wren  vertex2.glsl
Assets/PGA3/: main.wren  pga3.glsl  vertex3.glsl
Assets/Physics2/: main.wren  physics2.wren
Assets/ProcSfx/: main.wren
Assets/Skinning/: main.wren  skinning.glsl  vertex.glsl
Common/: App.cpp  App.hpp  App.wren  CMakeLists.txt  Game.wren
Common/Math/: common.hpp  pga2d.hpp  pga3d.hpp  r001.hpp  r010.hpp  r100.hpp  r200.hpp  r300.hpp  r310.hpp  r410.hpp
Common/Scripts/: app.wren  utils.wren
Common/include/: App.hpp
Common/src/: App.cpp
Include/: App.hpp
PGA/: CMakeLists.txt  Main.cpp
Pt1/: CMakeLists.txt  Game.wren  Game1.wren  Game2.wren  MVec2.hpp  main.cpp  mvec2.wren  utils.wren
Pt1/Examples/: ExC2.wren  ExMv2.wren
Pt2/: CMakeLists.txt  MVec2.hpp  MVec3.hpp  main.cpp  mvec.wren  mvec2.wren  mvec3.wren  pga.wren
Pt2/Examples/: ExMVec2.wren
Pt2/Scripts/: S1.wren  pga.wren
Pt2/Shaders/: basic.glsl
Pt2/Slides/: S1.wren
Source/: App.cpp  App.hpp  Main.cpp  Net.cpp
Source/Backend/: Code.cpp  File.cpp  Gl.cpp  Gui.cpp  Klein.cpp  Net.cpp  Sfx.cpp  Win.cpp  Wren.cpp
enc_temp_folder/2fb855b0b3d8c077da9338fc1bbea730/: utils.wren
enc_temp_folder/c59784af64d0795ed443384d7cef14c/: game.wren
